--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,47 @@
   </head>
 
   <body>
-    <%= yield %>
+
+        <div id="sidebar">
+
+             <div id="logo">
+                 <%= link_to root_path do %>
+                      <%=image_tag "logo.svg"  %>
+                 <%end %>
+             </div>
+
+             <ul>
+               <li class="category">website</li>
+               <li><%= link_to "Blog",root_path %></li>
+               <li>About</li>
+             </ul>
+   
+             <ul>
+               <li class="category">social</li>
+               <li>Twiter</li>
+               <li>Instagram</li>
+               <li>github</li>
+               <li>Email</li>
+             </ul>
+
+            <p class="sign_in">Admin Login</p> 
+
+        </div>
+
+    <div id="main_content">
+           <div id="header">
+                   <p>All Posts</p>
+           
+                   <div class="buttons">
+                      <button class="button"> <%= link_to "New Post", new_post_path(@post) %></button>
+                      <button class="button">Log out</button>
+                    </div>
+             </div>
+           
+           <% flash.each do |name,msg| %>
+                <%=content_tag(:div,msg,class: "alert")  %>
+           <%end %>
+           <%= yield %>
+    </div> 
   </body>
 </html>
