--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,2 @@
-<div id="page_wrapper">
-   <%= form_for :post, url: posts_path do |f|%>
-   <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-   </p>
-   <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-   </p>
-    <%= f.submit "subit" %>
-   <%end %>
-   </div>
+ <h1>New post</h1>
+<%= render "form" %>
