--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,15 @@
       <%= @post.title %>
     </h1>
     <p class="data">
-      Submitted <%= time_ago_in_words(@post.created_at) %>
+      Submitted <%= time_ago_in_words(@post.created_at) %> Ago 
+      |<%= link_to "Edit", edit_post_path(@post) %>
+      |<%= link_to "Delete",post_path(@post), method: :delete, data:{ confirm: "Are you sure"} %>
+    </p>
+    <p class="body">
+      <%= @post.body %>
+    </p>
+    <p>
+      <%= link_to "Edit",edit_post_path(@post)%>
     </p>
 </div>
+
