--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,5 +13,13 @@
     <p>
       <%= link_to "Edit",edit_post_path(@post)%>
     </p>
+    <div id="comments">
+      <h2><%= @post.comments.count %> Comments</h2>
+         <%=render @post.comments%>
+
+        <h3> Add a comment</h3>
+        <%= render "comments/form" %>
+      
+    </div>
 </div>
 
